[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu/Settings/Settings.gd" type="Script" id=1]
[ext_resource path="res://Assets/Poppins-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.180392, 0.345098, 0.545098, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.211765, 0.235294, 0.266667, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.152941, 0.278431, 0.415686, 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 2 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 421, 125 )
color = Color( 0.0784314, 0.129412, 0.14902, 1 )

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -79.5
margin_top = -117.0
margin_right = 79.5
margin_bottom = -54.0
rect_scale = Vector2( 1.04, 1 )
custom_colors/font_color_focus = Color( 0.0980392, 0.180392, 0.27451, 1 )
custom_colors/font_color = Color( 0.290196, 0.513726, 0.768627, 1 )
custom_colors/font_color_hover = Color( 0.247059, 0.435294, 0.666667, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.2, 0.211765, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Start"

[node name="MultiplayerLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = -297.0
margin_right = 148.5
margin_bottom = -226.0
custom_colors/font_color = Color( 0.290196, 0.513726, 0.768627, 1 )
custom_fonts/font = SubResource( 5 )
text = "Multiplayer"
align = 1

[node name="MultiOn" type="Button" parent="MultiplayerLabel"]
margin_left = 6.0
margin_top = 89.0
margin_right = 119.0
margin_bottom = 145.0
rect_scale = Vector2( 1.04, 1 )
custom_colors/font_color_focus = Color( 0.0980392, 0.180392, 0.27451, 1 )
custom_colors/font_color = Color( 0.290196, 0.513726, 0.768627, 1 )
custom_colors/font_color_hover = Color( 0.247059, 0.435294, 0.666667, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.2, 0.211765, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "On"

[node name="MultiOff" type="Button" parent="MultiplayerLabel"]
margin_left = 157.0
margin_top = 92.0
margin_right = 270.0
margin_bottom = 148.0
rect_scale = Vector2( 1.04, 1 )
custom_colors/font_color_focus = Color( 0.0980392, 0.180392, 0.27451, 1 )
custom_colors/font_color = Color( 0.290196, 0.513726, 0.768627, 1 )
custom_colors/font_color_hover = Color( 0.247059, 0.435294, 0.666667, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.2, 0.211765, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Off"

[node name="Marker" type="Label" parent="MultiplayerLabel"]
margin_left = 198.5
margin_top = 135.0
margin_right = 238.5
margin_bottom = 206.0
custom_colors/font_color = Color( 0.290196, 0.513726, 0.768627, 1 )
custom_fonts/font = SubResource( 6 )
text = "^"
align = 1

[node name="BotLevelLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_top = 288.0
margin_right = 150.0
margin_bottom = 359.0
custom_colors/font_color = Color( 0.290196, 0.513726, 0.768627, 1 )
custom_fonts/font = SubResource( 5 )
text = "Bot Level"
align = 1

[node name="Easy" type="Button" parent="BotLevelLabel"]
margin_left = -46.0
margin_top = 89.0
margin_right = 67.0
margin_bottom = 145.0
rect_scale = Vector2( 1.04, 1 )
custom_colors/font_color_focus = Color( 0.0980392, 0.180392, 0.27451, 1 )
custom_colors/font_color = Color( 0.290196, 0.513726, 0.768627, 1 )
custom_colors/font_color_hover = Color( 0.247059, 0.435294, 0.666667, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.2, 0.211765, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Easy"

[node name="Med" type="Button" parent="BotLevelLabel"]
margin_left = 87.0
margin_top = 89.0
margin_right = 200.0
margin_bottom = 145.0
rect_scale = Vector2( 1.04, 1 )
custom_colors/font_color_focus = Color( 0.0980392, 0.180392, 0.27451, 1 )
custom_colors/font_color = Color( 0.290196, 0.513726, 0.768627, 1 )
custom_colors/font_color_hover = Color( 0.247059, 0.435294, 0.666667, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.2, 0.211765, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Med"

[node name="Hard" type="Button" parent="BotLevelLabel"]
margin_left = 221.0
margin_top = 87.0
margin_right = 334.0
margin_bottom = 143.0
rect_scale = Vector2( 1.04, 1 )
custom_colors/font_color_focus = Color( 0.0980392, 0.180392, 0.27451, 1 )
custom_colors/font_color = Color( 0.290196, 0.513726, 0.768627, 1 )
custom_colors/font_color_hover = Color( 0.247059, 0.435294, 0.666667, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.2, 0.211765, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Hard"

[node name="Marker" type="Label" parent="BotLevelLabel"]
margin_left = -7.0
margin_top = 135.0
margin_right = 33.0
margin_bottom = 206.0
custom_colors/font_color = Color( 0.290196, 0.513726, 0.768627, 1 )
custom_fonts/font = SubResource( 6 )
text = "^"
align = 1

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MultiplayerLabel/MultiOn" to="." method="_on_MultiOn_pressed"]
[connection signal="pressed" from="MultiplayerLabel/MultiOff" to="." method="_on_MultiOff_pressed"]
[connection signal="pressed" from="BotLevelLabel/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="BotLevelLabel/Med" to="." method="_on_Med_pressed"]
[connection signal="pressed" from="BotLevelLabel/Hard" to="." method="_on_Hard_pressed"]
